--- a/exercise02/exercise02_python_mlp.ipynb
+++ b/exercise02/exercise02_python_mlp.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,8 +372,8 @@
     "        #h = e_z / np.sum(e_z, axis=reduction_axes, keepdims=True)\n",
     "        \n",
     "        # keepdims needed?\n",
-    "        exp = np.exp(z - np.max(z, axis=reduction_axes))\n",
-    "        h = exp / np.sum(exp, axis=reduction_axes)\n",
+    "        exp = np.exp(z - np.max(z, axis=reduction_axes, keepdims=True))\n",
+    "        h = exp / np.sum(exp, axis=reduction_axes, keepdims=True)\n",
     "        # END ###################\n",
     "        return h\n",
     "    \n",
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,13 +515,16 @@
     "        # We don't need this arg.\n",
     "        a, y = self.input_cache\n",
     "        \n",
-    "        # START TODO ################ \n",
-    "        raise NotImplementedError\n",
+    "        # START ################ \n",
+    "        n = len(a)\n",
+    "        grad = a - y\n",
+    "        grad = grad/n\n",
     "        # Recreate the batch dimension\n",
-    "        # END TODO ##################\n",
+    "        grad = grad.reshape(a.shape[0],a.shape[1], 1)\n",
+    "        # END ##################\n",
     "        \n",
     "        assert len(grad.shape) == 3, (\"CrossEntropyLoss.backward should return (batch_size, grad_size, 1)\"\n",
-    "                                      \" but is {}.\".format(z.shape))\n",
+    "                                      \" but is {}.\".format(grad.shape))\n",
     "        return grad\n",
     "\n",
     "\n",
@@ -538,13 +541,14 @@
     "        # We don't need this arg\n",
     "        a, y = self.input_cache\n",
     "        \n",
-    "        # START TODO ################ \n",
-    "        raise NotImplementedError\n",
+    "        # START ################ \n",
+    "        grad = (a - y) / len(a)\n",
     "        # Recreate the batch dimension\n",
-    "        # END TODO ##################\n",
+    "        grad = grad.reshape(a.shape[0],a.shape[1], 1)\n",
+    "        # END ##################\n",
     "        \n",
-    "        assert len(grad.shape) == 3, (\"MSELossCrossEntropyLoss.backward should return (batch_size, grad_size, 1)\"\n",
-    "                                      \" but is {}.\".format(z.shape))\n",
+    "        assert len(grad.shape) == 3, (\"MSELoss.backward should return (batch_size, grad_size, 1)\"\n",
+    "                                      \" but is {}.\".format(grad.shape))\n",
     "        return grad"
    ]
   },
@@ -608,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,36 +652,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x_transpose:  (2, 1, 10)\n",
-      "self.W.grad:  (30, 10)\n",
-      "self.b.grad:  (30, 1)\n",
-      "grad:  (2, 30, 1)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "non-broadcastable output operand with shape (30,10) doesn't match the broadcast shape (2,30,10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-98-5d6f9e6dc0ea>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mRelu\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcheck_gradients\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput_args\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mSigmoid\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcheck_gradients\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput_args\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mLinear\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m30\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcheck_gradients\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput_args\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;31m# MLP\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-2-c218ab0cbe1c>\u001b[0m in \u001b[0;36mcheck_gradients\u001b[1;34m(self, input_args)\u001b[0m\n\u001b[0;32m     69\u001b[0m             \"input_args must be a tuple but is {}\".format(type(input_args)))\n\u001b[0;32m     70\u001b[0m         \u001b[0mTOLERANCE\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1e-6\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 71\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcheck_gradients_wrt_input\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput_args\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mTOLERANCE\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     72\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcheck_gradients_wrt_params\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput_args\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mTOLERANCE\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     73\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-2-c218ab0cbe1c>\u001b[0m in \u001b[0;36mcheck_gradients_wrt_input\u001b[1;34m(self, input_args, tolerance)\u001b[0m\n\u001b[0;32m     97\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     98\u001b[0m         error = scipy.optimize.check_grad(\n\u001b[1;32m---> 99\u001b[1;33m             output_given_input, grad_given_input, np.ravel(input_args[0]))\n\u001b[0m\u001b[0;32m    100\u001b[0m         \u001b[0mnum_outputs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprod\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0minput_args\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    101\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\scipy\\optimize\\optimize.py\u001b[0m in \u001b[0;36mcheck_grad\u001b[1;34m(func, grad, x0, *args, **kwargs)\u001b[0m\n\u001b[0;32m    749\u001b[0m         raise ValueError(\"Unknown keyword arguments: %r\" %\n\u001b[0;32m    750\u001b[0m                          (list(kwargs.keys()),))\n\u001b[1;32m--> 751\u001b[1;33m     return sqrt(sum((grad(x0, *args) -\n\u001b[0m\u001b[0;32m    752\u001b[0m                      approx_fprime(x0, func, step, *args))**2))\n\u001b[0;32m    753\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-2-c218ab0cbe1c>\u001b[0m in \u001b[0;36mgrad_given_input\u001b[1;34m(x)\u001b[0m\n\u001b[0;32m     94\u001b[0m             \u001b[0mout\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     95\u001b[0m             \u001b[1;31m# compute the gradient w.r.t. to the input\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 96\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mones_like\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mout\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     97\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     98\u001b[0m         error = scipy.optimize.check_grad(\n",
-      "\u001b[1;32m<ipython-input-97-43f6a6f41cf9>\u001b[0m in \u001b[0;36mbackward\u001b[1;34m(self, grad)\u001b[0m\n\u001b[0;32m     37\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'grad: '\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrad\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 39\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgrad\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmatmul\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrad\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx_transpose\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     40\u001b[0m         \u001b[1;31m#self.W.grad = self.W.grad + np.matmul(grad, x_transpose)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgrad\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrad\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: non-broadcastable output operand with shape (30,10) doesn't match the broadcast shape (2,30,10)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_vector = np.random.uniform(-1., 1., size=(2, 10, 1))\n",
     "input_args = (input_vector,)\n",
